# esp-mic-acc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  UDP.md  clang-format.txt  sdkconfig  sdkconfig.ci
components/esp-analog-microphone/: CMakeLists.txt  esp_analog_microphone.c
components/esp-analog-microphone/include/: esp_analog_microphone.h
components/esp_microphone/: CMakeLists.txt  Kconfig.projbuild  esp_microphone.c
components/esp_microphone/include/: esp_microphone.h
components/udp_handler/: CMakeLists.txt  udp_handler.c
components/udp_handler/include/: udp_handler.h
main/: CMakeLists.txt  config_gpios.h  main.c  peripheral.c  peripheral.h
scripts/: CMakeLists.txt  audio_visualize.py  graph_json.py  instructions.md  json_to_wav.py  log_parser.py  py_udp_catch.py  udp_catch  udp_catch.c  udp_packets.json  waveform_data.csv  waveform_data_minimal.csv
tools/: plot_raw_data.py
